--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,20 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'maven-publish'
+}
+
+apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
+
+// update these next lines to fit your submodule
+group = 'com.stylelibrary'
+version = '1.0'
+
+// Add sources as an artifact
+task sourceJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier "source"
 }
 
 android {
@@ -8,11 +22,10 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-//        applicationId "com.example.stylelibrary"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0"
+        versionName "$my_version"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -21,6 +34,8 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
         }
     }
     compileOptions {
@@ -41,4 +56,67 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+}
+
+// Loop over all variants
+android.libraryVariants.all { variant ->
+    variant.outputs.all { output ->
+        // This creates a publication for each variant
+        publishing.publications.create(variant.name, MavenPublication) {
+            // The sources artifact from earlier
+            artifact sourceJar
+
+            // Variant dependent artifact, e.g. release, debug
+            artifact source: output.outputFile, classifier: output.name
+
+            // Go through all the dependencies for each variant and add them to the POM
+            // file as dependencies
+            pom.withXml {
+                def dependencies = asNode().appendNode('dependencies')
+
+                // Filter out anything that's not an external dependency. You shouldn't
+                // be publishing artifacts that depend on local (e.g. project) dependencies,
+                // but who knows...
+                configurations.getByName(variant.name + "CompileClasspath").allDependencies
+                        .findAll { it instanceof ExternalDependency }
+                        .each {
+                            def dependency = dependencies.appendNode('dependency')
+
+                            dependency.appendNode('groupId', it.group)
+                            dependency.appendNode('artifactId', it.name)
+                            dependency.appendNode('version', it.version)
+                        }
+            }
+        }
+    }
+}
+
+// Ensure that the publish task depends on assembly
+tasks.all { task ->
+    if (task instanceof AbstractPublishToMaven) {
+        task.dependsOn assemble
+    }
+}
+
+apply from: "sub/secret.gradle"
+
+task printEnvs() {
+    doLast {
+        println("$ACCESS_KEY")
+        println("$SECRET_KEY")
+    }
+}
+
+// Configure the destination repository with
+// S3 URL and access credentials
+publishing {
+    repositories {
+        maven {
+            url "s3://psb.android.s3.amazonaws.com"
+            credentials(AwsCredentials) {
+                "$ACCESS_KEY"
+                "$SECRET_KEY"
+            }
+        }
+    }
 }
