--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'maven-publish'
 
 // update these next lines to fit your submodule
 group = 'com.stylelibrary'
-version = '1.0'
+version = '1.1'
 
 // Add sources as an artifact
 task sourceJar(type: Jar) {
@@ -19,13 +19,13 @@ task sourceJar(type: Jar) {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
-        versionName "$my_version"
+        versionName version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -49,11 +49,11 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.10"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
@@ -114,8 +114,8 @@ publishing {
         maven {
             url "s3://psb.android.s3.amazonaws.com"
             credentials(AwsCredentials) {
-                "$ACCESS_KEY"
-                "$SECRET_KEY"
+                it.accessKey("$ACCESS_KEY")
+                it.secretKey("$SECRET_KEY")
             }
         }
     }
