--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'maven-publish'
 
 // update these next lines to fit your submodule
 group = 'com.stylelibrary'
-version = '1.1'
+version = '1.2'
 
 // Add sources as an artifact
 task sourceJar(type: Jar) {
@@ -25,7 +25,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
-        versionName version
+        versionName "1.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
