--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'maven-publish'
 
 // update these next lines to fit your submodule
 group = 'com.stylelibrary'
-version = '1.3'
+version = '1.4'
 
 // Add sources as an artifact
 task sourceJar(type: Jar) {
@@ -25,7 +25,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
-        versionName "1.3"
+        versionName version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -97,12 +97,11 @@ tasks.all { task ->
     }
 }
 
-apply from: "sub/secret.gradle"
-
 task printEnvs() {
     doLast {
-        println("$ACCESS_KEY")
-        println("$SECRET_KEY")
+        println(System.getenv('ACCESS_KEY'))
+        println(System.getenv('SECRET_KEY'))
+        println(System.getenv('URL'))
     }
 }
 
@@ -111,10 +110,10 @@ task printEnvs() {
 publishing {
     repositories {
         maven {
-            url "s3://psb.android.s3.amazonaws.com"
+            url System.getenv('URL')
             credentials(AwsCredentials) {
-                it.accessKey("$ACCESS_KEY")
-                it.secretKey("$SECRET_KEY")
+                accessKey(System.getenv('ACCESS_KEY'))
+                secretKey(System.getenv('SECRET_KEY'))
             }
         }
     }
